--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -6,20 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ExploreActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="175dp"
-        android:layout_height="85dp"
-        android:fontFamily="cursive"
-        android:text="Explore Page"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.181" />
-
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="161dp"
@@ -47,25 +33,70 @@
         app:layout_constraintVertical_bias="0.979"
         app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
 
-    <SearchView
-        android:layout_width="260dp"
-        android:layout_height="70dp"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/containsSearchFilterSettings"
+        android:layout_width="393dp"
+        android:layout_height="42dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.001" />
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="260dp"
-        android:layout_height="70dp"
+    <Button
+        android:id="@+id/title_Explore_Page"
+        android:layout_width="176dp"
+        android:layout_height="61dp"
+        android:fontFamily="cursive"
+        android:text="Exlore Page"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.919"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.082" />
+
+    <ImageButton
+        android:id="@+id/search_icon_button"
+        android:layout_width="47dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.021"
+        app:srcCompat="@drawable/search_icon" />
+
+
+    <ImageButton
+        android:id="@+id/social_grub_logo"
+        android:layout_width="81dp"
+        android:layout_height="69dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.001"
+        app:srcCompat="@drawable/socialgrublogo" />
+
+    <ImageButton
+        android:id="@+id/settings_button"
+        android:layout_width="47dp"
+        android:layout_height="43dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.02"
+        app:srcCompat="@drawable/settings_icon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
