Made Profile Button directed to Profile Page by Rudolph Garcia

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,12 +7,16 @@
     tools:context=".ProfileActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="141dp"
-        android:layout_height="33dp"
-        android:text="Welcome to your user profile!"
+        android:id="@+id/textView2"
+        android:layout_width="144dp"
+        android:layout_height="69dp"
+        android:fontFamily="cursive"
+        android:text="Profile Page"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024" />
 </androidx.constraintlayout.widget.ConstraintLayout>
