--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.964" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/profileButton"
         android:layout_width="109dp"
         android:layout_height="79dp"
         android:tint="#9C27B0"
